<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/imgPonto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="center"
                android:background="@color/cardview_shadow_start_color"
                app:srcCompat="@drawable/ic_camera"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:layout_marginStart="@dimen/margin16"
                android:layout_marginTop="@dimen/margin16"
                android:nextFocusDown="@id/layoutCategorias"
                android:hint="@string/hint_nome"
                android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:layout_marginStart="@dimen/margin16"
                android:layout_marginTop="@dimen/margin16"
                android:background="@drawable/spinner_layout_background"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/txtDescCidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:paddingEnd="3dp"
                    android:layout_marginTop="-8dp"
                    android:background="@android:color/white"
                    android:text="@string/categoria"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spCategorias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtDescCidade"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:layout_marginStart="@dimen/margin16"
                android:layout_marginTop="@dimen/margin16"
                android:nextFocusDown="@id/layoutCor"
                android:hint="@string/hint_local"
                android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_location_pin"
                    android:drawableTint="@color/colorAccent"
                    android:inputType="textPostalAddress"
                    android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutCor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin16"
                    android:layout_marginStart="@dimen/margin16"
                    android:hint="@string/hint_pin_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:maxLength="7"
                        android:textAllCaps="true"
                        android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                    android:id="@+id/imgCor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin8"
                    android:contentDescription="@string/content_description"
                    app:layout_constraintEnd_toEndOf="@id/layoutCor"
                    app:layout_constraintTop_toTopOf="@id/layoutCor"
                    app:layout_constraintBottom_toBottomOf="@id/layoutCor"
                    app:srcCompat="@drawable/ic_color_spot"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:layout_marginStart="@dimen/margin16"
                android:layout_marginTop="@dimen/margin16"
                android:text="@string/add_ponto"
                android:textColor="@color/colorAccent"
                app:backgroundTint="@android:color/holo_orange_light"/>
    </LinearLayout>
</layout>