<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="br.com.mdr.mobilechallenge.viewmodel.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F3F3F6"
            tools:context=".view.LoginFragment">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description"
                app:srcCompat="@drawable/login_background"/>

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin32"
                android:layout_marginEnd="@dimen/margin32"
                android:transitionName="@string/card_transition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin16">

                <ImageView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/content_description"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@drawable/ic_snow_challenge"/>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        app:icon="@drawable/ic_facebook"
                        app:iconTint="@color/colorAccent"
                        android:text="@string/sign_in_fb"
                        android:textColor="@color/colorAccent"
                        app:backgroundTint="@color/colorPrimary"
                        app:strokeColor="@color/colorAccent"
                        app:strokeWidth="2dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>